tests/unit/default/syntax-error/132-add-fk-table-columns.x.t
---- IN ----
+FK%child(foo,bar)|
---- OUT ----
---- ERR ----
syntax: expected `=>` after `...d(foo,bar)` near `|` at position 18 - at line 1
---- EXIT ----
1
